# todo-application

./: CLAUDE.md  README.md  run_backend.bat  run_frontend.bat  start-backend.sh  start-frontend.sh
.claude/agents/: a11y-responsive-reviewer.md  auth-security-reviewer.md  code-reviewer.md  secure-implementation-architect.md
.claude/skills/auth-skill/: SKILL.md
.claude/skills/backend-skill/: SKILL.md
.claude/skills/database-schema/: SKILL.md
.claude/skills/frontend-skill/: SKILL.md
.specify/memory/: constitution.md
backend/: .env.example  .flake8  .gitignore  Dockerfile  Procfile  alembic.ini  app.py  gunicorn.conf.py  init_db.py  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh  wsgi.py
backend/src/: config.py  main.py
backend/src/api/middleware/: __init__.py  jwt_auth.py
backend/src/api/v1/: __init__.py  auth.py  tasks.py
backend/src/database/: __init__.py  connection.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/versions/: 001_create_users_table.py  002_create_tasks_table.py  003_add_indexes.py
backend/src/models/: task.py  user.py
backend/src/services/: __init__.py  auth_service.py  task_service.py
frontend/: .env.local.example  .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuthForm.tsx  DarkTodoApp.jsx  TaskCard.tsx  TaskForm.jsx  TaskForm.tsx  Toast.tsx  ToastProvider.tsx  TodoApp.jsx
frontend/src/lib/: types.ts  utils.ts
specs/master/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+22 files in other folders)
